--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ configure(allprojects) { project ->
 			mavenBom "org.jetbrains.kotlinx:kotlinx-coroutines-bom:1.3.5"
 			mavenBom "org.junit:junit-bom:5.6.3"
 		}
+		repositories {
+			maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+			maven{ url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+		}
 		dependencies {
 			dependencySet(group: 'org.apache.logging.log4j', version: '2.13.3') {
 				entry 'log4j-api'
@@ -408,5 +412,13 @@ configure(rootProject) {
 				artifact distZip
 			}
 		}
+	}
+}
+
+
+allprojects {
+	repositories {
+		maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+		maven{ url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
 	}
 }
